# iqr_sk_robot

./: README.md
iqr_sk_bringup/: CMakeLists.txt  package.xml
iqr_sk_bringup/launch/: bringup.launch
iqr_sk_bringup/script/: init_ptpd.bash  install_ouster_driver.bash
iqr_sk_description/: CMakeLists.txt  package.xml
iqr_sk_description/launch/: view_model.launch  view_robot.launch
iqr_sk_description/urdf/: cr5.urdf.xacro  iqr_sk_robot.urdf.xacro  kinect_dk.xacro  sensor_support.xacro
iqr_sk_description/urdf/mesh/: cr5_support.stl
